--- a/Projects.html
+++ b/Projects.html
@@ -11,7 +11,7 @@
 		<div id="bigimage"></div>
 		<div id="pages">
 			<ul>
-				<li><a href="./main.html">Home</a></li>
+				<li><a href="./index.html">Home</a></li>
 				<li><a href="./Projects.html">Projects</a></li>
 				<li><a href="./Fumo.html">Fumo</a></li>
 				<li><a href="./Where.html">Where am I</a></li>
