--- a/Where.html
+++ b/Where.html
@@ -29,6 +29,9 @@
 			<p>I can also be found at these places</p>
 			<br>
 			<br>
+			<a style="color:#b4e900;" href="https://misskey.io/@Karusader" target=”_blank”>Misskey</a>
+			<br>
+			<br>
 			<a style="color:#1d9bf0;" href="https://www.twitter.com/Karusader" target=”_blank”>Twitter (unfortunately)</a>
 			<br>
 			<br>
@@ -36,6 +39,7 @@
 			<br>
 			<br>
 			<a id="discord"  href="#" style="color:#5662f6;" onClick="copyDiscord()">Discord (Karusader#6048)</a>
+			
 		</div>
 	</div>
 
