HAHA IMM MIN BLUESJKJY

--- a/Where.html
+++ b/Where.html
@@ -32,6 +32,9 @@
 			<a style="color:#1d9bf0;" href="https://www.twitter.com/Karusader" target=”_blank”>Twitter (unfortunately)</a>
 			<br>
 			<br>
+			<a style="color:#002db6;" href="https://bsky.app/profile/karusader.bsky.social" target=”_blank”>Bluesky</a>
+			<br>
+			<br>
 			<a style="color:#ff0000;" href="https://www.youtube.com/@Karusader/" target=”_blank”>Youtube</a>
 			<br>
 			<br>
