--- a/Projects.html
+++ b/Projects.html
@@ -32,7 +32,8 @@
 			<br>
 			<br>
 			<br>
-			<p> Put cool  projects here dumb ass </p>
+			<a href="https://github.com/Karusader/ps2vnengine_bad">PS2 Visual Novel Engine (Bad)</a>
+			<p>Visual novel engine I made when i tried to port neet girl date night to the PS2, while it technically works, the audio code is completely fucked and doesnt work properly, every time a sprite is loaded, it clears the ENTIRE VRAM, and when you start the game you peep the horror momentarily</p>
 		</div>
 	</div>
 
