--- a/Projects.html
+++ b/Projects.html
@@ -19,7 +19,7 @@
 				<li><a href="./uhoh.html">uh oh help im out of html space</a></li>
 		</div>
 		<div id="content">
-			<h1 style="text-align: center; margin-left: auto; margin-right: auto; ">HELLO!!!!!!!1!!!!</h1>
+			<h1 style="text-align: center; margin-left: auto; margin-right: auto; ">good and cool projects</h1>
 			<br>
 			<br>
 			<br>
