add the shit map

--- a/Projects.html
+++ b/Projects.html
@@ -34,6 +34,12 @@
 			<br>
 			<a href="https://github.com/Karusader/ps2vnengine_bad">PS2 Visual Novel Engine (Bad)</a>
 			<p>Visual novel engine I made when i tried to port neet girl date night to the PS2, while it technically works, the audio code is completely fucked and doesnt work properly, every time a sprite is loaded, it clears the ENTIRE VRAM, and when you start the game you peep the horror momentarily</p>
+			<br>
+			<br>
+			<br>
+			<br>
+			<a href="https://drive.google.com/drive/folders/1XrlJFBvn5o6kj7OqScs-7MA2Fhf5ubrz?usp=sharing">Smoking Horror (shitass hl2 "horror" mod)</a>
+			<p>twitter shitpost (do not lose the oldports or you have to restart and im not putting that in map logic)</p>
 		</div>
 	</div>
 
