--- a/Projects.html
+++ b/Projects.html
@@ -42,7 +42,7 @@
 			<br>
 			<br>
 			<br>
-			<a href="https://drive.google.com/drive/folders/1Sqq_BolBpJZ61uE070VazJJlJWHekFJ9?usp=sharing target="_blank">thespace</a>
+			<a href="https://drive.google.com/drive/folders/1Sqq_BolBpJZ61uE070VazJJlJWHekFJ9?usp=sharing" target=”_blank”>thespace</a>
 			<p>"The Freeman will accept this, or suffer greatly on the road ahead!" (find the secret)</p>
 		</div>
 	</div>
