--- a/Where.html
+++ b/Where.html
@@ -38,6 +38,9 @@
 			<a style="color:#ff0000;" href="https://www.youtube.com/@Karusader/" target=”_blank”>Youtube</a>
 			<br>
 			<br>
+			<a style="color:#0d2741;" href="https://vndb.org/u255706/ulist?vnlist=1" target=”_blank”>VNDB</a>
+			<br>
+			<br>
 			<a id="discord"  href="#" style="color:#5662f6;" onClick="copyDiscord()">Discord (Karusader#6048)</a>
 			
 		</div>
